--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore"
   },
   "dependencies": {
-    "@auth/unstorage-adapter": "^2.7.4",
+    "@auth/supabase-adapter": "^1.7.4",
     "@hookform/resolvers": "^3.9.0",
     "@next/bundle-analyzer": "~14.2.5",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -40,16 +40,19 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-nextjs": "~0.11.0",
+    "axios": "^1.7.9",
+    "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "~0.7.0",
     "clsx": "~2.1.1",
     "cmdk": "1.0.0",
     "cookies-next": "^5.0.2",
-    "crypto-browserify": "^3.12.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
     "idb-keyval": "^6.2.1",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.25",
@@ -63,9 +66,9 @@
     "react-resizable-panels": "^2.0.23",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "swr": "^2.3.0",
     "tailwind-merge": "~2.5.2",
     "tailwindcss-animate": "~1.0.7",
-    "unstorage": "^1.13.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
