--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kickstart-saas",
+  "name": "memory-souvenir",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -20,7 +20,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,20 +31,20 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-nextjs": "~0.11.0",
     "axios": "^1.7.9",
     "bcrypt-ts": "^5.0.3",
-    "class-variance-authority": "~0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "~2.1.1",
     "cmdk": "1.0.0",
     "cookies-next": "^5.0.2",
@@ -53,7 +53,7 @@
     "idb-keyval": "^6.2.1",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.427.0",
+    "lucide-react": "^0.469.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "~3.17.2",
