--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-nextjs": "~0.11.0",
+    "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +51,7 @@
     "cookies-next": "^5.0.2",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
+    "fetch-intercept": "^2.4.0",
     "idb-keyval": "^6.2.1",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
