--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-nextjs": "~0.11.0",
     "@tanstack/react-query": "^5.62.11",
+    "ag-grid-community": "^33.0.3",
+    "ag-grid-react": "^33.0.3",
     "axios": "^1.7.9",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +57,7 @@
     "idb-keyval": "^6.2.1",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.25",
@@ -75,6 +78,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "~20",
     "@types/react": "~18",
     "@types/react-dom": "~18",
