--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,9 @@ GOOGLE_CLIENT_SECRET=""
 
 # Logtail
 LOGTAIL_SOURCE_TOKEN=""
+
+# AWS Configuration
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
