--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.7.4",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
+    "@google-cloud/storage": "^7.14.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/bundle-analyzer": "~14.2.5",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -59,6 +62,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
+    "mime-types": "^2.1.35",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "~3.17.2",
@@ -74,8 +78,10 @@
     "swr": "^2.3.0",
     "tailwind-merge": "~2.5.2",
     "tailwindcss-animate": "~1.0.7",
+    "uuid": "^11.0.3",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
